--- a/manifest-v2.yml
+++ b/manifest-v2.yml
@@ -1,14 +1,14 @@
 ---
 applications:
-- name: reviews
+- name: reviews-v2
   memory: 1G
   no-route: true
   path: target/rob-reviews-0.0.1-SNAPSHOT.jar
   env:
     ENABLE_RATINGS: true
     SERVICES_DOMAIN: cf-workloads.svc.cluster.local
-    REVIEW_TEXT_1: "This is version 1 of robreviews"
-    REVIEW_TEXT_2: "Measuring a 6.4 on the cool scale."
-    STAR_COLOR: "purple"
+    REVIEW_TEXT_1: "This is version 2 of robreviews"
+    REVIEW_TEXT_2: "No more funny things to say"
+    STAR_COLOR: "green"
 
 
